[gd_scene load_steps=6 format=3 uid="uid://d03ia485kq18l"]

[ext_resource type="Texture2D" uid="uid://dexvpe7lj3ago" path="res://Content/Demo/Assets/Items/ResourceItems/ScrapMetal/InventoryImage.png" id="1_4us0a"]
[ext_resource type="Script" path="res://UIObjects/BaseFacilityMenu/Crafting/UIElements/CraftingRecipeItemCostUIElement.gd" id="1_be5xc"]
[ext_resource type="FontFile" uid="uid://cfesmr0va1fab" path="res://UIObjects/Assets/Fonts/VCR_OSD_MONO.ttf" id="2_07lm3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tma22"]
bg_color = Color(0.193463, 0.499772, 5.77569e-07, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_71wnr"]
bg_color = Color(0.771541, 0.0711274, 0.255872, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="CraftingRecipeItemCostElement" type="BoxContainer"]
size_flags_horizontal = 4
script = ExtResource("1_be5xc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ItemImage" type="TextureRect" parent="HBoxContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
texture = ExtResource("1_4us0a")
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_07lm3")
theme_override_font_sizes/font_size = 23
text = "1/1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnoughQuantityIndicator" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_tma22")

[node name="NotEnoughQuantityIndicator" type="Panel" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_71wnr")
